--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-#introduction {
+h1 {
   text-align: center;
   font-family: 'arial';
   font-size: 100px;
   margin: 0;
+  color:white;
 }
 
 h2 {
@@ -20,7 +21,7 @@ ul {
   margin:0;
   padding: 0;
   overflow:hidden;
-  background-color: grey;
+  background-color: #00a0a7;
 }
 
 li {
@@ -38,16 +39,20 @@ a {
 }
 
 a:hover {
-  color: black;
+  text-decoration: none;
 }
 
 #first_page {
   border-style: solid;
   border-width: 5px;
-  border-color: grey;
+  border-color: #00a0a7;
   border-radius: 5px;
   padding: 250px;
-  margin: 75px 50px 50px 50px;
+  padding-bottom: 300px;
+  margin: 50px, 50px, 50px, 50px;
+  background-image: url(https://images.pexels.com/photos/175703/pexels-photo-175703.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb);
+  background-size:100%;
+  background-position: top;
 }
 
 .page {
@@ -59,11 +64,12 @@ a:hover {
   text-align: center;
   font-size: 30px;
   font-family: georgia;
+  color: #00a0a7;
 }
 
 .source {
   text-align: center;
-  font-size: 30px;
+  font-size: 20px;
   font-family: sans-serif;
-  color: grey;
+  color: #00a0a7;
 }
