--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
 h1 {
-  text-align: center;
-  font-family: 'arial';
+  font-family: 'Trebuchet MS, verdana, arial';
   font-size: 100px;
   margin: 0;
   color:white;
 }
 
 h2 {
-  text-align: center;
-  font-family: 'sans-serif';
+  font-family: 'Garamond, sans-serif';
   font-size: 40px;
   margin-top: 0;
   color: white;
@@ -56,30 +54,12 @@ button {
 }
 
 #first_page {
-  border-style: solid;
-  border-width: 5px;
-  border-color: #00a0a7;
-  border-radius: 5px;
   padding: 250px;
-  padding-bottom: 300px;
-  margin: 100px, 50px, 50px, 50px;
-  background-image: url(https://images.pexels.com/photos/175703/pexels-photo-175703.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb);
-  background-size:100%;
-  background-position: top;
+  padding-bottom: 250px;
 }
 
 #final {
-  border-style: solid;
-  border-width: 5px;
-  border-color: #00a0a7;
-  border-radius: 5px;
   padding: 150px;
-  margin: 100px, 50px;
-  margin-bottom: 100px;
-  background-image: url(https://wallpapersite.com/images/pages/pic_h/9940.jpg);
-  background-size:100%;
-  background-position: top;
-  height: 700px;
 }
 
 #final_header {
@@ -90,6 +70,13 @@ button {
   color:white;
 }
 
+.fluffy{
+  text-align: center;
+  padding:200px;
+  font-size: 80px;
+  color:#1a9fa4;
+}
+
 .page {
   padding: 200px;
 }
@@ -97,13 +84,47 @@ button {
 .quote {
   text-align: center;
   font-size: 30px;
-  font-family: sans-serif;
-  color: #00a0a7;
+  font-family: helvetica, sans-serif;
+  color: #d3dfef;
+}
+
+.new{
+  font-size: 30px;
+  font-family: helvetica, sans-serif;
+  color: #1a9fa4;
 }
 
 .source {
   text-align: center;
   font-size: 20px;
   font-family: sans-serif;
-  color: #00a0a7;
+  color: #d3dfef;
+}
+
+.section{
+  background-size: cover;
+  text-align:center;
+}
+.slide{
+  background-size: cover;
+}
+
+.controlArrow.prev{
+  left: 50px;
+}
+
+.controlArrow.next{
+  right: 50px;
+}
+
+#infoMenu li a{
+  color: #fff;
+}
+
+#section0{
+  background-image: url(https://images.pexels.com/photos/175703/pexels-photo-175703.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb);
+}
+
+#section7{
+  background-image: url(https://wallpapersite.com/images/pages/pic_h/9940.jpg);
 }
