--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ button {
   text-align: center;
   font-size: 30px;
   font-family: helvetica, sans-serif;
-  color: #d3dfef;
+  color: #ffffff;
 }
 
 .new{
@@ -98,7 +98,7 @@ button {
   text-align: center;
   font-size: 20px;
   font-family: sans-serif;
-  color: #d3dfef;
+  color: #ffffff;
 }
 
 .section{
