--- a/style.css
+++ b/style.css
@@ -78,11 +78,10 @@ button {
 }
 
 #para {
-  font-size: 40px;
+  font-size: 30px;
   font-family: helvetica, sans-serif;
   color: #1a9fa4;
 }
-
 
 .fluffy{
   text-align: center;
@@ -112,6 +111,7 @@ button {
 .section{
   background-size: cover;
   text-align:center;
+  overflow: hidden;
 }
 .slide{
   background-size: cover;
@@ -129,6 +129,59 @@ button {
   background-image: url(https://images.pexels.com/photos/175703/pexels-photo-175703.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb);
 }
 
+#section2{
+  background-size: 100%;
+  background-image: url(https://1.bp.blogspot.com/-_v-Kq98bMv4/U3QV2FlwA2I/AAAAAAAAFsk/09Ri5Q7dlrg/s1600/baby+geese+3.JPG);
+}
+
+#section4{
+  background-image: url(http://www.alwaysonpurpose.com/wp-content/uploads/2015/04/happypeople-1024x679.jpg);
+}
+
 #section7{
   background-image: url(https://wallpapersite.com/images/pages/pic_h/9940.jpg);
+}
+
+/* Hiding video controls
+* See: https://css-tricks.com/custom-controls-in-html5-video-full-screen/
+* --------------------------------------- */
+video::-webkit-media-controls {
+  display:none !important;
+}
+
+#myVideo{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  top:0;
+  right:0;
+  width: 100%;
+  height: 100%;
+  background-size: 100% 100%;
+  background-color: black; /* in case the video doesn't fit the whole page*/
+    background-image: /* our video */;
+    background-position: center center;
+    background-size: contain;
+    object-fit: cover; /*cover video background */
+    z-index:3;
+}
+
+
+
+/* Layer with position absolute in order to have it over the video
+* --------------------------------------- */
+#section4 .layer{
+  position: absolute;
+  z-index: 4;
+  width: 100%;
+  left: 0;
+  top: 43%;
+
+  /*
+  * Preventing flicker on some browsers
+  * See http://stackoverflow.com/a/36671466/1081396  or issue #183
+  */
+  -webkit-transform: translate3d(0,0,0);
+  -ms-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
 }
